Fixes for white-space wrapping

--- a/src/app/core/card/card.component.css
+++ b/src/app/core/card/card.component.css
@@ -16,6 +16,7 @@
     transform: translateY(150vh);
     border-radius: 25px;
     box-shadow: 3px 5px 7px rgba(0,0,0,.1);
+    white-space: normal;
 }
 
 .card.full {
